--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<p>大家好 我是菌</p
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="about">
+        <div class="container">
+            <h1>Your Name</h1>
+            <p>Web Developer &amp; Designer</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit eget ante vel fringilla.</p>
+        </div>
+    </section>
+    <section id="portfolio">
+        <div class="container">
+            <h2>Portfolio</h2>
+            <div class="project">
+                <img src="project1.jpg" alt="Project 1">
+                <h3>Project 1</h3>
+                <p>Description of project 1.</p>
+            </div>
+            <div class="project">
+                <img src="project2.jpg" alt="Project 2">
+                <h3>Project 2</h3>
+                <p>Description of project 2.</p>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>Email: your@email.com</p>
+            <p>Phone: +1 123-456-7890</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourname">linkedin.com/in/yourname</a></p>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            &copy; 2023 Your Name
+        </div>
+    </footer>
+</body>
+</html>
