--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </svg>
                 </div>
                 <a href="/" class="home-link router-link-exact-active router-link-active">
-                    <span class="site-name">Yao (Ava) Xiao</span>
+                    <span class="site-name">Yijun Xiao</span>
                 </a>
                 <div class="links">
                     <nav class="nav-links can-hide">
