--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>, 
                     <p>
                         I obtained my master's degree from the 
-                        <a href="https://www.tju.edu.cn/" target="_blank" rel="noopener noreferrer">Tianjin Univeysity</a>, 
+                        <a href="https://www.tju.edu.cn/" target="_blank" rel="noopener noreferrer">Tianjin University</a>, 
                         Before that, I got my B.S. degree from 
                         <a href="https://www.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>.
                     </p>
