--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
                         I am Yijun Xiao, an urban enthusiast with a Master's in Architecture. 
                         I explore built environments through big data, with a focus on consumer geography and built environment morphology. 
                     <p>
-                        I obtained my master's degree from the 
-                        <a href="https://www.tju.edu.cn/" target="_blank" rel="noopener noreferrer">Tianjin University</a>, 
-                        Before that, I got my B.S. degree from 
-                        <a href="https://www.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>.
+                        I obtained my master of engineering degree from the 
+                        <a href="https://www.tju.edu.cn/english" target="_blank" rel="noopener noreferrer">Tianjin University</a>, 
+                        Before that, I got my B.Arch. degree from 
+                        <a href="https://en.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>.
                         Currently, I work at the development & planning team at 
                         <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>, 
                     </p>
                     <h2 id="research-interests">Research Interests</h2>
                     <p>
                         My research focuses on Urban Science, particularly in the areas of 
-                        <strong>消费地理</strong>, 
-                        <strong>建成环境形态</strong>, and 
-                        <strong>城市大数据分析与可视化</strong>.
+                        <strong>Consumer Geography/消费地理</strong>, 
+                        <strong>Built Environment Morphology/建成环境形态</strong>, and 
+                        <strong>Urban Big Data Analysis and Visualization/城市大数据分析与可视化</strong>.
                     </p>
                     <h2 id="publications">Publications</h2>
                     <p>
