--- a/index.html
+++ b/index.html
@@ -1,40 +1,132 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Yijun Xiao</title>
-    <meta name="description" content=" Yijun Xiao,urban enthusiast with a Master's in Architecture.">
-    <link rel="icon" href="/profile/logo.jpg">
+    <meta name="description" content="Yijun Xiao,urban enthusiast with a Master's in Architecture.">
+    <link rel="icon" href="/profile/logo.jpg">    
+    <link rel="preload" href="/assets/css/0.styles.6f2efe72.css" as="style">
+    <link rel="preload" href="/assets/js/app.7c280fda.js" as="script">
+    <link rel="preload" href="/assets/js/4.135c667e.js" as="script">
+    <link rel="preload" href="/assets/js/15.6a08d0d2.js" as="script">
+    <link rel="preload" href="/assets/js/10.b1e6a4f0.js" as="script">
+    <link rel="preload" href="/assets/js/6.ecd310a8.js" as="script">
+    <link rel="preload" href="/assets/js/8.76f38b4e.js" as="script">
+    <link rel="prefetch" href="/assets/js/11.4fc46344.js">
+    <link rel="prefetch" href="/assets/js/12.56e90fcf.js">
+    <link rel="prefetch" href="/assets/js/13.6008ece7.js">
+    <link rel="prefetch" href="/assets/js/14.a07b3aa6.js">
+    <link rel="prefetch" href="/assets/js/16.7ef8a410.js">
+    <link rel="prefetch" href="/assets/js/17.3a13c6bb.js">
+    <link rel="prefetch" href="/assets/js/18.b209fa1c.js">
+    <link rel="prefetch" href="/assets/js/19.6e447888.js">
+    <link rel="prefetch" href="/assets/js/2.8b2c6820.js">
+    <link rel="prefetch" href="/assets/js/20.3f154c83.js">
+    <link rel="prefetch" href="/assets/js/21.dd6afa2c.js">
+    <link rel="prefetch" href="/assets/js/22.e81041c7.js">
+    <link rel="prefetch" href="/assets/js/23.49fcf33b.js">
+    <link rel="prefetch" href="/assets/js/24.84d1e083.js">
+    <link rel="prefetch" href="/assets/js/25.8c94bfac.js">
+    <link rel="prefetch" href="/assets/js/3.db37e407.js">
+    <link rel="prefetch" href="/assets/js/5.f71d31e2.js">
+    <link rel="prefetch" href="/assets/js/7.a5ee95ae.js">
+    <link rel="prefetch" href="/assets/js/9.29eabb08.js">
     
-    <link rel="preload" href="/assets/css/0.styles.6f2efe72.css" as="style"><link rel="preload" href="/assets/js/app.7c280fda.js" as="script"><link rel="preload" href="/assets/js/4.135c667e.js" as="script"><link rel="preload" href="/assets/js/5.f71d31e2.js" as="script"><link rel="preload" href="/assets/js/11.4fc46344.js" as="script"><link rel="preload" href="/assets/js/6.ecd310a8.js" as="script"><link rel="prefetch" href="/assets/js/10.b1e6a4f0.js"><link rel="prefetch" href="/assets/js/12.56e90fcf.js"><link rel="prefetch" href="/assets/js/13.6008ece7.js"><link rel="prefetch" href="/assets/js/14.a07b3aa6.js"><link rel="prefetch" href="/assets/js/15.6a08d0d2.js"><link rel="prefetch" href="/assets/js/16.7ef8a410.js"><link rel="prefetch" href="/assets/js/17.3a13c6bb.js"><link rel="prefetch" href="/assets/js/18.b209fa1c.js"><link rel="prefetch" href="/assets/js/19.6e447888.js"><link rel="prefetch" href="/assets/js/2.8b2c6820.js"><link rel="prefetch" href="/assets/js/20.3f154c83.js"><link rel="prefetch" href="/assets/js/21.dd6afa2c.js"><link rel="prefetch" href="/assets/js/22.e81041c7.js"><link rel="prefetch" href="/assets/js/23.49fcf33b.js"><link rel="prefetch" href="/assets/js/24.84d1e083.js"><link rel="prefetch" href="/assets/js/25.8c94bfac.js"><link rel="prefetch" href="/assets/js/3.db37e407.js"><link rel="prefetch" href="/assets/js/7.a5ee95ae.js"><link rel="prefetch" href="/assets/js/8.76f38b4e.js"><link rel="prefetch" href="/assets/js/9.29eabb08.js">
     <link rel="stylesheet" href="/assets/css/0.styles.6f2efe72.css">
-  </head>
-  <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-active"><!----> <span class="site-name">Yijun Xiao</span></a> <div class="links"><!----> <nav class="nav-links can-hide"><div class="nav-item"><a href="/" class="nav-link">
-  Home
-</a></div><div class="nav-item"><a href="/publications/" class="nav-link router-link-exact-active router-link-active">
-  Publications
-  <!----></a></div><div class="nav-item"><a href="/miscellaneous/" class="nav-link">
-  Miscellaneous
-</a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link">
-  Home
-</a></div><div class="nav-item"><a href="/publications/" class="nav-link router-link-exact-active router-link-active">
-  Publications
-  <!----></a></div><div class="nav-item"><a href="/miscellaneous/" class="nav-link">
-  Miscellaneous
-</a></div> <!----></nav>  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><div class="tagpapers"><h2>All Publications by Year</h2> <div class="tags"><span class="tagpaper"><span><a href="/publications/" target="_self"><u>All by Year</u></a></span></span><span class="tagpaper"><span><a href="/publications/ExplainableAI" target="_self">Explainable AI</a></span></span><span class="tagpaper"><span><a href="/publications/Robustness" target="_self">Robustness</a></span></span><span class="tagpaper"><span><a href="/publications/Others" target="_self">Other Topics</a></span></span></div> <br> <div class="note"><font size="3" color="rgb(0,0,0)" style="font-weight:normal;">Representative papers are highlighted with a red border</font></div></div> <div class="papers"><div><div><h1>2023</h1> <div><!----></div><div><div><div class="paper show-border highlight"><div class="paper-badge"><img src="/publications/xu2023patch.png" alt class="badge-image"> <abbr class="badge">WACV 2023</abbr></div> <div class="paper-content"><p><b>PatchZero: Defending against Adversarial Patch Attacks by Detecting and Zeroing the Patch</b></p> <p>Ke Xu*, <b>Yijun Xiao</b>*, Zhaoheng Zheng, Kaijie Cai, Ram Nevatia.</p> <i><p>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2023.</p></i> <span>
-                [<a shape="rect" class="toggle">Abstract</a>]
-              </span> <span>
-                [<a href="https://openaccess.thecvf.com/content/WACV2023/papers/Xu_PatchZero_Defending_Against_Adversarial_Patch_Attacks_by_Detecting_and_Zeroing_WACV_2023_paper.pdf" target="_blank">Paper</a>]
-              </span> <!----> <!----> <!----> <!----> <!----> <span>
-                [<a shape="rect" class="toggle">Bibtex</a>]
-              </span> <table bgcolor="#ace5f2" id="abs_PatchZero: Defending against Adversarial Patch Attacks by Detecting and Zeroing the Patch</b></p> <p>Ke Xu*, <b>Yijun Xiao</b>*, Zhaoheng Zheng, Kaijie Cai, Ram Nevatia.</p> <i><p>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2023.</p></i> <span>
-                [<a shape="rect" class="toggle">Abstract</a>]
-              </span> <span>
-                [<a href="https://papers.cumincad.org/data/works/att/caadria2024_176.pdf" target="_blank">Paper</a>]
-              </span> <!----> <!----> <!----> <!----> <!----> <span>
-                [<a shape="rect" class="toggle">Bibtex</a>]
-              </span> <table bgcolor="#ace5f2" id="Analysing the Factors in Shaping Neighbourhood Restaurants Sceneries" style="display: none"><tr><td><span>This study looks at neighborhood restaurants in Tianjin, China, during rapid urbanization and changing consumer preferences. It analyzes factors like demand, transportation, and competition, finding a significant rise in community restaurants from 2018 to 2021. Key influences include population density and housing prices. </span></td></tr></table>
-Copyright © 2024
-<a href="https://yijun-xiao.github.io/" target="_blank" title="Yijun Xiao"><span style="color:#4693B8;">Yijun Xiao</span></a> <br><br>
+</head>
+<body>
+    <div id="app" data-server-rendered="true">
+        <div class="theme-container no-sidebar home-page">
+            <header class="navbar">
+                <div class="sidebar-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon">
+                        <path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path>
+                    </svg>
+                </div>
+                <a href="/" class="home-link router-link-exact-active router-link-active">
+                    <span class="site-name">Yao (Ava) Xiao</span>
+                </a>
+                <div class="links">
+                    <nav class="nav-links can-hide">
+                        <div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">Home</a></div>
+                        <div class="nav-item"><a href="/publications/" class="nav-link">Publications</a></div>
+                        <div class="nav-item"><a href="/miscellaneous/" class="nav-link">Miscellaneous</a></div>
+                    </nav>
+                </div>
+            </header>
+            <div class="sidebar-mask"></div>
+            <aside class="sidebar">
+                <nav class="nav-links">
+                    <div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">Home</a></div>
+                    <div class="nav-item"><a href="/publications/" class="nav-link">Publications</a></div>
+                    <div class="nav-item"><a href="/miscellaneous/" class="nav-link">Miscellaneous</a></div>
+                </nav>
+            </aside>
+            <main class="page">
+                <div class="theme-default-content content__default">
+                    <div class="profile">
+                        <div class="image">
+                            <img src="/profile/Ava.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="name">Yijun Xiao</div>
+                            <div class="bio">
+                                <p>Urban enthusiast with a Master's in Architecture</p>
+                            </div>
+                            <div class="socials">
+                                <div><a href="https://orcid.org/my-orcid?orcid=0009-0009-9115-5107" target="_blank"><img src="/icons/orcid.svg" alt="ORCID" title="ORCID"></a></div>
+                                <div><a href="https://www.linkedin.com/in/yijun-xiao-039168219/" target="_blank"><img src="/icons/linkedin-mono.svg" alt="Linkedin" title="Linkedin"></a></div>
+                            </div>
+                            <div class="contact">
+                                <span class="email">Email: </span>
+                                <a href="mailto:ava_xiao@icloud.com" title="Contact me" class="email">yijun.xiao@icloud.com</a>
+                            </div>
+                        </div>
+                    </div>
+                    <h2 id="about-me">About Me</h2>
+                    <p>
+                        I am Yijun Xiao, an urban enthusiast with a Master's in Architecture. 
+                        I explore built environments through big data, with a focus on consumer geography and built environment morphology. 
+                        Currently, I work at the project planning team at 
+                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>, 
+                    <p>
+                        I obtained my master's degree from the 
+                        <a href="https://www.tju.edu.cn/" target="_blank" rel="noopener noreferrer">Tianjin Univeysity</a>, 
+                        Before that, I got my B.S. degree from 
+                        <a href="https://www.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>.
+                    </p>
+                    <h2 id="research-interests">Research Interests</h2>
+                    <p>
+                        My research focuses on Urban Science, particularly in the areas of 
+                        <strong>消费地理</strong>, 
+                        <strong>建成环境形态</strong>, and 
+                        <strong>城市大数据分析与可视化</strong>.
+                    </p>
+                    <h2 id="publications">Publications</h2>
+                    <p>
+                        Please check my 
+                        <a href="/publications/" target="_self">Publications</a> page for more details.
+                    </p>
+                    <h2 id="contact">Contact</h2>
+                    <p>If you want to get in touch, feel free to email me at 
+                        <a href="mailto:yijun.xiao@icloud.com">yijun.xiao@icloud.com</a>.
+                    </p>
+                </div>
+            </main>
+            <footer class="footer">
+                <div class="footer-content">
+                    <p>&copy; 2024 Yijun Xiao. All rights reserved.</p>
+                </div>
+            </footer>
+        </div>
+    </div>
+    
+    <script src="/assets/js/app.7c280fda.js"></script>
+    <script src="/assets/js/4.135c667e.js"></script>
+    <script src="/assets/js/15.6a08d0d2.js"></script>
+    <script src="/assets/js/10.b1e6a4f0.js"></script>
+    <script src="/assets/js/6.ecd310a8.js"></script>
+    <script src="/assets/js/8.76f38b4e.js"></script>
+</body>
+</html>
