--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </div>
                             <div class="contact">
                                 <span class="email">Email: </span>
-                                <a href="mailto:ava_xiao@icloud.com" title="Contact me" class="email">yijun.xiao@icloud.com</a>
+                                <a href="mailto:yijun.xiao@icloud.com" title="Contact me" class="email">yijun.xiao@icloud.com</a>
                             </div>
                         </div>
                     </div>
@@ -88,13 +88,13 @@
                     <p>
                         I am Yijun Xiao, an urban enthusiast with a Master's in Architecture. 
                         I explore built environments through big data, with a focus on consumer geography and built environment morphology. 
-                        Currently, I work at the project planning team at 
-                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>, 
                     <p>
                         I obtained my master's degree from the 
                         <a href="https://www.tju.edu.cn/" target="_blank" rel="noopener noreferrer">Tianjin Univeysity</a>, 
                         Before that, I got my B.S. degree from 
-                        <a href="https://www.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>.
+                        <a href="https://www.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>,
+                         Currently, I work at the planning and development team at 
+                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>.
                     </p>
                     <h2 id="research-interests">Research Interests</h2>
                     <p>
