--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </svg>
                 </div>
                 <a href="/" class="home-link router-link-exact-active router-link-active">
-                    <span class="site-name">Yao (Ava) Xiao</span>
+                    <span class="site-name">Yijun Xiao</span>
                 </a>
                 <div class="links">
                     <nav class="nav-links can-hide">
@@ -67,7 +67,7 @@
                 <div class="theme-default-content content__default">
                     <div class="profile">
                         <div class="image">
-                            <img src="/profile/Ava.jpg" alt="">
+                            <img src="/profile/profile.jpg" alt="">
                         </div>
                         <div class="info">
                             <div class="name">Yijun Xiao</div>
