--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <nav class="nav-links can-hide">
                         <div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">Home</a></div>
                         <div class="nav-item"><a href="/publications/" class="nav-link">Publications</a></div>
-                        <div class="nav-item"><a href="/miscellaneous/" class="nav-link">Miscellaneous</a></div>
+                        <div class="nav-item"><a href="/miscellaneous/" class="nav-link">Experiences</a></div>
                     </nav>
                 </div>
             </header>
@@ -60,7 +60,7 @@
                 <nav class="nav-links">
                     <div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">Home</a></div>
                     <div class="nav-item"><a href="/publications/" class="nav-link">Publications</a></div>
-                    <div class="nav-item"><a href="/miscellaneous/" class="nav-link">Miscellaneous</a></div>
+                    <div class="nav-item"><a href="/miscellaneous/" class="nav-link">Experiences</a></div>
                 </nav>
             </aside>
             <main class="page">
@@ -87,14 +87,14 @@
                     <h2 id="about-me">About Me</h2>
                     <p>
                         I am Yijun Xiao, an urban enthusiast with a Master's in Architecture. 
-                        I explore built environments through big data, with a focus on consumer geography and built environment morphology. 
+                        I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
                     <p>
                         I obtained my master's degree from the 
                         <a href="https://www.tju.edu.cn/english" target="_blank" rel="noopener noreferrer">Tianjin Univeysity</a>, 
                         Before that, I got my B.S. degree from 
                         <a href="https://en.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>,
                          Currently, I work at the planning and development team at 
-                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>.
+                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>,the  .
                     </p>
                     <h2 id="research-interests">Research Interests</h2>
                     <p>
