--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                         I am Yijun Xiao, an urban enthusiast with a Master's in Architecture. 
                         I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
                     <p>
-                        I obtained my master's degree from the 
+                        I obtained my master's degree from 
                         <a href="https://www.tju.edu.cn/english" target="_blank" rel="noopener noreferrer">Tianjin Univeysity</a>, 
                         Before that, I got my B.S. degree from 
                         <a href="https://en.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>,
                          Currently, I work at the planning and development team at 
-                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>,the  .
+                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>.
                     </p>
                     <h2 id="research-interests">Research Interests</h2>
                     <p>
