--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                         I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
                     <p>
                         I obtained my master's degree from 
-                        <a href="https://www.tju.edu.cn/english" target="_blank" rel="noopener noreferrer">Tianjin Univeysity</a>, 
+                        <a href="https://www.tju.edu.cn/english" target="_blank" rel="noopener noreferrer">Tianjin University</a>, 
                         Before that, I got my B.S. degree from 
                         <a href="https://en.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>,
                          Currently, I work at the planning and development team at 
-                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>.
+                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>, a leading urban developer based in Shanghai
                     </p>
                     <h2 id="research-interests">Research Interests</h2>
                     <p>
