--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                     <h2 id="research-interests">Research Interests</h2>
                     <p>
                         My research focuses on Urban Science, particularly in the areas of 
-                        <strong>Consumption Geography 消费地理</strong>, 
-                        <strong>Built Environment Morphology 建成环境形态</strong>, and 
-                        <strong>Urban Big Data Analysis and Visualization 城市大数据分析与可视化</strong>.
+                        <strong>Consumption Geography </strong>, 
+                        <strong>Built Environment Morphology </strong>, and 
+                        <strong>Urban Big Data Analysis and Visualization </strong>.
                     </p>
                     <h2 id="publications">Publications</h2>
                     <p>
