--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Yijun Xiao</title>
     <meta name="description" content="Yijun Xiao,urban enthusiast with a Master's in Architecture.">
-    <link rel="icon" href="/profile/logo.jpg">    
+    <link rel="icon" href="/profile/logo.jpeg">    
     <link rel="preload" href="/assets/css/0.styles.6f2efe72.css" as="style">
     <link rel="preload" href="/assets/js/app.7c280fda.js" as="script">
     <link rel="preload" href="/assets/js/4.135c667e.js" as="script">
@@ -67,7 +67,7 @@
                 <div class="theme-default-content content__default">
                     <div class="profile">
                         <div class="image">
-                            <img src="/profile/profile.jpg" alt="">
+                            <img src="/profile/profile.jpeg" alt="">
                         </div>
                         <div class="info">
                             <div class="name">Yijun Xiao</div>
