--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <nav class="nav-links can-hide">
                         <div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">Home</a></div>
                         <div class="nav-item"><a href="/publications/" class="nav-link">Publications</a></div>
-                        <div class="nav-item"><a href="/miscellaneous/" class="nav-link">Experiences</a></div>
+                        <div class="nav-item"><a href="/experiences/" class="nav-link">Experiences</a></div>
                     </nav>
                 </div>
             </header>
@@ -76,7 +76,7 @@
                             </div>
                             <div class="socials">
                                 <div><a href="https://orcid.org/my-orcid?orcid=0009-0009-9115-5107" target="_blank"><img src="/icons/orcid.svg" alt="ORCID" title="ORCID"></a></div>
-                                <div><a href="https://www.linkedin.com/in/yijun-xiao-039168219/" target="_blank"><img src="/icons/linkedin-mono.svg" alt="Linkedin" title="Linkedin"></a></div>
+                                <div><a href="https://www.linkedin.com/in/yijun-xiao-039168219/" target="_blank"><img src="/icons/linkedin.svg" alt="Linkedin" title="Linkedin"></a></div>
                             </div>
                             <div class="contact">
                                 <span class="email">Email: </span>
@@ -86,7 +86,7 @@
                     </div>
                     <h2 id="about-me">About Me</h2>
                     <p>
-                        I am Yijun Xiao, an urban enthusiast with a M.Eng. focusing on spatial data science, with work expierence at a leading urban developer in China.
+                        I am Yijun Xiao, an urban enthusiast with a M.Eng. focusing on spatial data science, currently working at a leading urban developer in China.
                         I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
                     <p>
                         I obtained my master's degree from 
