--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Yijun Xiao</title>
-    <meta name="description" content="Yijun Xiao,urban enthusiast with a Master's in Architecture.">
+    <meta name="description" content="Yijun Xiao.">
     <link rel="icon" href="/profile/logo.jpeg">    
     <link rel="preload" href="/assets/css/0.styles.6f2efe72.css" as="style">
     <link rel="preload" href="/assets/js/app.7c280fda.js" as="script">
