--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                     <h2 id="about-me">About Me</h2>
                     <p>
-                        I am Yijun Xiao, an urban enthusiast with a M.Eng. focusing on spatial data science, currently working at a leading urban developer in China.
+                        I am Yijun Xiao, an urban enthusiast with a M.Eng. focusing on spatial data science.
                     <p>
                         I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
                     <p>
