--- a/publications/index.html
+++ b/publications/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Yijun Xiao</title>
     <meta name="description" content=" Yijun Xiao,urban enthusiast with a Master's in Architecture.">
-    <link rel="icon" href="/profile/logo.jpg">
+    <link rel="icon" href="/profile/logo.jpeg">
     
     <link rel="preload" href="/assets/css/0.styles.6f2efe72.css" as="style"><link rel="preload" href="/assets/js/app.7c280fda.js" as="script"><link rel="preload" href="/assets/js/4.135c667e.js" as="script"><link rel="preload" href="/assets/js/5.f71d31e2.js" as="script"><link rel="preload" href="/assets/js/11.4fc46344.js" as="script"><link rel="preload" href="/assets/js/6.ecd310a8.js" as="script"><link rel="prefetch" href="/assets/js/10.b1e6a4f0.js"><link rel="prefetch" href="/assets/js/12.56e90fcf.js"><link rel="prefetch" href="/assets/js/13.6008ece7.js"><link rel="prefetch" href="/assets/js/14.a07b3aa6.js"><link rel="prefetch" href="/assets/js/15.6a08d0d2.js"><link rel="prefetch" href="/assets/js/16.7ef8a410.js"><link rel="prefetch" href="/assets/js/17.3a13c6bb.js"><link rel="prefetch" href="/assets/js/18.b209fa1c.js"><link rel="prefetch" href="/assets/js/19.6e447888.js"><link rel="prefetch" href="/assets/js/2.8b2c6820.js"><link rel="prefetch" href="/assets/js/20.3f154c83.js"><link rel="prefetch" href="/assets/js/21.dd6afa2c.js"><link rel="prefetch" href="/assets/js/22.e81041c7.js"><link rel="prefetch" href="/assets/js/23.49fcf33b.js"><link rel="prefetch" href="/assets/js/24.84d1e083.js"><link rel="prefetch" href="/assets/js/25.8c94bfac.js"><link rel="prefetch" href="/assets/js/3.db37e407.js"><link rel="prefetch" href="/assets/js/7.a5ee95ae.js"><link rel="prefetch" href="/assets/js/8.76f38b4e.js"><link rel="prefetch" href="/assets/js/9.29eabb08.js">
     <link rel="stylesheet" href="/assets/css/0.styles.6f2efe72.css">
@@ -22,14 +22,13 @@
 </a></div><div class="nav-item"><a href="/publications/" class="nav-link router-link-exact-active router-link-active">
   Publications
   <!----></a></div><div class="nav-item"><a href="/miscellaneous/" class="nav-link">
-  Miscellaneous
+  s
 </a></div> <!----></nav>  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><div class="tagpapers"><h2>All Publications by Year</h2> <div class="tags"><span class="tagpaper"><span><a href="/publications/" target="_self"><u>All by Year</u></a></span></span><span class="tagpaper"><span><a href="/publications/ExplainableAI" target="_self">Explainable AI</a></span></span><span class="tagpaper"><span><a href="/publications/Robustness" target="_self">Robustness</a></span></span><span class="tagpaper"><span><a href="/publications/Others" target="_self">Other Topics</a></span></span></div> <br> <div class="note"><font size="3" color="rgb(0,0,0)" style="font-weight:normal;">Representative papers are highlighted with a red border</font></div></div> <div class="papers"><div><div><h1>2023</h1> <div><!----></div><div><div><div class="paper show-border highlight"><div class="paper-badge"><img src="/publications/xu2023patch.png" alt class="badge-image"> <abbr class="badge">WACV 2023</abbr></div> <div class="paper-content"><p><b>PatchZero: Defending against Adversarial Patch Attacks by Detecting and Zeroing the Patch</b></p> <p>Ke Xu*, <b>Yijun Xiao</b>*, Zhaoheng Zheng, Kaijie Cai, Ram Nevatia.</p> <i><p>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2023.</p></i> <span>
                 [<a shape="rect" class="toggle">Abstract</a>]
               </span> <span>
                 [<a href="https://openaccess.thecvf.com/content/WACV2023/papers/Xu_PatchZero_Defending_Against_Adversarial_Patch_Attacks_by_Detecting_and_Zeroing_WACV_2023_paper.pdf" target="_blank">Paper</a>]
               </span> <!----> <!----> <!----> <!----> <!----> <span>
                 [<a shape="rect" class="toggle">Bibtex</a>]
-              </span> <table bgcolor="#ace5f2" id="abs_PatchZero: Defending against Adversarial Patch Attacks by Detecting and Zeroing the Patch</b></p> <p>Ke Xu*, <b>Yijun Xiao</b>*, Zhaoheng Zheng, Kaijie Cai, Ram Nevatia.</p> <i><p>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2023.</p></i> <span>
                 [<a shape="rect" class="toggle">Abstract</a>]
               </span> <span>
                 [<a href="https://papers.cumincad.org/data/works/att/caadria2024_176.pdf" target="_blank">Paper</a>]
