--- a/index.html
+++ b/index.html
@@ -86,17 +86,15 @@
                     </div>
                     <h2 id="about-me">About Me</h2>
                     <p>
-                        I am Yijun Xiao, an urban enthusiast with a M.Eng. focusing on spatial data science.
-                    <p>
-                        I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
+                        I am Yijun Xiao, an urban enthusiast with a M.Eng. focusing on spatial data science.I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
                     <p>
                         I obtained my master's degree from 
                         <a href="https://www.tju.edu.cn/english" target="_blank" rel="noopener noreferrer">Tianjin University</a>, 
                         Before that, I got my B.Arch. degree from 
                         <a href="https://en.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>.
-                        I joined the management trainee program at 
-                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>, based in Shanghai
-                    </p>,and is currently working at the planning and development team.
+                        I currently work at the planning and development team at 
+                        <a href="http://www.shuionland.com/" target="_blank" rel="noopener noreferrer">Shui On Land</a>, based in Shanghai.
+                    </p>
                     <h2 id="research-interests">Research Interests</h2>
                     <p>
                         My research focuses on Urban Science, particularly in the areas of 
