--- a/publications/index.html
+++ b/publications/index.html
@@ -16,24 +16,44 @@
 </a></div><div class="nav-item"><a href="/publications/" class="nav-link router-link-exact-active router-link-active">
   Publications
   <!----></a></div><div class="nav-item"><a href="/miscellaneous/" class="nav-link">
-  Miscellaneous
+  Experiences
 </a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link">
   Home
 </a></div><div class="nav-item"><a href="/publications/" class="nav-link router-link-exact-active router-link-active">
   Publications
   <!----></a></div><div class="nav-item"><a href="/miscellaneous/" class="nav-link">
   s
-</a></div> <!----></nav>  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><div class="tagpapers"><h2>All Publications by Year</h2> <div class="tags"><span class="tagpaper"><span><a href="/publications/" target="_self"><u>All by Year</u></a></span></span><span class="tagpaper"><span><a href="/publications/ExplainableAI" target="_self">Explainable AI</a></span></span><span class="tagpaper"><span><a href="/publications/Robustness" target="_self">Robustness</a></span></span><span class="tagpaper"><span><a href="/publications/Others" target="_self">Other Topics</a></span></span></div> <br> <div class="note"><font size="3" color="rgb(0,0,0)" style="font-weight:normal;">Representative papers are highlighted with a red border</font></div></div> <div class="papers"><div><div><h1>2023</h1> <div><!----></div><div><div><div class="paper show-border highlight"><div class="paper-badge"><img src="/publications/xu2023patch.png" alt class="badge-image"> <abbr class="badge">WACV 2023</abbr></div> <div class="paper-content"><p><b>PatchZero: Defending against Adversarial Patch Attacks by Detecting and Zeroing the Patch</b></p> <p>Ke Xu*, <b>Yijun Xiao</b>*, Zhaoheng Zheng, Kaijie Cai, Ram Nevatia.</p> <i><p>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2023.</p></i> <span>
-                [<a shape="rect" class="toggle">Abstract</a>]
-              </span> <span>
-                [<a href="https://openaccess.thecvf.com/content/WACV2023/papers/Xu_PatchZero_Defending_Against_Adversarial_Patch_Attacks_by_Detecting_and_Zeroing_WACV_2023_paper.pdf" target="_blank">Paper</a>]
-              </span> <!----> <!----> <!----> <!----> <!----> <span>
-                [<a shape="rect" class="toggle">Bibtex</a>]
-                [<a shape="rect" class="toggle">Abstract</a>]
-              </span> <span>
-                [<a href="https://papers.cumincad.org/data/works/att/caadria2024_176.pdf" target="_blank">Paper</a>]
-              </span> <!----> <!----> <!----> <!----> <!----> <span>
-                [<a shape="rect" class="toggle">Bibtex</a>]
-              </span> <table bgcolor="#ace5f2" id="Analysing the Factors in Shaping Neighbourhood Restaurants Sceneries" style="display: none"><tr><td><span>This study looks at neighborhood restaurants in Tianjin, China, during rapid urbanization and changing consumer preferences. It analyzes factors like demand, transportation, and competition, finding a significant rise in community restaurants from 2018 to 2021. Key influences include population density and housing prices. </span></td></tr></table>
-Copyright © 2024
+<div class="theme-default-content content__default">
+  <div class="tagpapers">
+    <h2>All Publications by Year</h2>
+    <div class="tags">
+      <span class="tagpaper"><a href="/publications/" target="_self"><u>All by Year</u></a></span>
+      <span class="tagpaper"><a href="/publications/ExplainableAI" target="_self">Explainable AI</a></span>
+      <span class="tagpaper"><a href="/publications/Robustness" target="_self">Robustness</a></span>
+      <span class="tagpaper"><a href="/publications/Others" target="_self">Other Topics</a></span>
+    </div>
+    <br>
+    <div class="note">
+      <font size="3" color="rgb(0,0,0)" style="font-weight:normal;">
+        Representative papers are highlighted with a red border
+      </font>
+    </div>
+  </div>
+  <div class="papers">
+    <h1>2023</h1>
+    <div class="paper show-border highlight">
+      <div class="paper-content">
+        <p><b>PatchZero: Defending against Adversarial Patch Attacks by Detecting and Zeroing the Patch</b></p>
+        <p>Ke Xu*, <b>Yijun Xiao</b>*, Zhaoheng Zheng, Kaijie Cai, Ram Nevatia.</p>
+        <i><p>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2023.</p></i>
+        <span>[<a shape="rect" class="toggle">Abstract</a>]</span>
+        <span>[<a href="https://openaccess.thecvf.com/content/WACV2023/papers/Xu_PatchZero_Defending_Against_Adversarial_Patch_Attacks_by_Detecting_and_Zeroing_WACV_2023_paper.pdf" target="_blank">Paper</a>]</span>
+      </div>
+      <div class="abstract" style="display: none;">
+        <p>This paper presents a novel method for defending against adversarial patch attacks by detecting and zeroing the patch...</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <a href="https://yijun-xiao.github.io/" target="_blank" title="Yijun Xiao"><span style="color:#4693B8;">Yijun Xiao</span></a> <br><br>
